--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "email": "vrodriguezfe@icloud.com"
   },
   "scripts": {
+    "start": "NODE_ENV=development node esbuild.config.js",
     "generate:manifest": "scripty",
-    "chmod": "find scripts ! -name '_*' -name '*.js' -exec chmod +x {} \\;",
-    "build": "node esbuild.config.js",
+    "build": "NODE_ENV=production node esbuild.config.js",
     "postbuild": "npm run generate:manifest",
     "push": "scripty"
   },
