--- a/jsconfig.json
+++ b/jsconfig.json
@@ -23,7 +23,7 @@
     "skipLibCheck": true,
     "strictBindCallApply": true,
     "strictFunctionTypes": true,
-    "strictNullChecks": false,
+    "strictNullChecks": true,
     "strictPropertyInitialization": false,
     "suppressExcessPropertyErrors": true,
     "target": "esnext",
