--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,6 +43,7 @@
     "editor.defaultFormatter": "dbaeumer.vscode-eslint",
     "editor.formatOnSave": true
   },
+  "cody.autocomplete.enabled": false,
   "eslint.enable": true,
   "eslint.experimental.useFlatConfig": true,
   "eslint.format.enable": true,
@@ -55,6 +56,7 @@
     "typescript",
     "handlebars"
   ],
+  "intellicodeCompletions.language.javascript": false,
   "javascript.suggestionActions.enabled": false,
   "typescript.disableAutomaticTypeAcquisition": true,
   "typescript.enablePromptUseWorkspaceTsdk": true,
